# automation

./: .gitignore  README.md  app.py  check_emails.py  check_gmail_emails.py  check_gmx_emails.py  custom_requests.py  email_parser.py  email_utils.py  get_refresh_token_app.py  get_secrets.py  get_token_app.py  handle_messages.py  main.py  oauth_token.py  pyproject.toml  send_email.py  tasks.py  todoist.py
.github/workflows/: automation.yml  linting.yml
static/: copy.js  end.js  style.css
templates/: add_secrets_form.html  base.html  end.html  gmx_credentials.html  gmx_credentials_form.html  index.html  provider_credentials.html  provider_credentials_form.html  provider_error.html  provider_interstitial.html
templates/instructions/: google.html  todoist.html
