[project]
name = "automation"
version = "2024.11.1"
description = "Automatically create Todoist tasks when I receive a new email."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["flask"]

	[project.optional-dependencies]
	dev = ["black", "flake8", "isort", "pylint"]

	[project.urls]
	Homepage = "https://github.com/lfavole/automation"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.main]
jobs = 0
disable = [
    "bad-indentation",
    "bare-except",
    "fixme",
    "global-statement",
    "import-outside-toplevel",
    "invalid-str-returned",
    "line-too-long",
    "missing-module-docstring",
    "missing-timeout",
    "no-member",
    "protected-access",
    "unspecified-encoding",
]
include-naming-hint = "y"

[tool.pylint.basic]
allowed-redefined-builtins = "id"
good-names = ["f", "i", "id"]
no-docstring-rgx = "^(main|__.*__)$"

[tool.setuptools]
py-modules = []
