[project]
name = "automation"
version = "2024.11.1"
description = "Automatically create Todoist tasks when I receive a new email."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["flask", "pynacl"]

	[project.optional-dependencies]
	dev = ["ruff"]

	[project.urls]
	Homepage = "https://github.com/lfavole/automation"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true

[tool.setuptools]
py-modules = []
